--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <section class="action-content">
         <div class="action-area">
             <div class="sign-up-text">
-                <strong>Call to action! It's time!</strong>   
-                <p>Sign up for awesome projects by clicking that button right over there!</p>
+                <strong>Let's Connect!</strong>   
+                <p>Sign up for awesome projects and resources by enrolling over there!</p>
             </div>
                 <a href="https://www.theodinproject.com/" class="sign-up" target="_blank">Sign Up</a>
         </div>
